src/main/java/com/example/vmrentalrest/exceptions/invalidParametersExceptions/InvalidUserException.java
package com.example.vmrentalrest.exceptions.invalidParametersExceptions;

public class InvalidUserException extends InvalidParametersException {

        public InvalidUserException() {
            super("Invalid user");
        }
}
